Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-419

'typedef spi::KeySet KeySet' changes meaning of typedef

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.10.0, 0.11.0
    • None
    • Filter
    • None
    • Ubuntu Saucy, GCC 4.8.1, Autotools

    Description

      Observed in the build...

      In file included from ../../../../log4cxx/src/main/include/log4cxx/spi/filter.h:24:0,
      from ../../../../log4cxx/src/main/include/log4cxx/filter/andfilter.h:27,
      from ../../../../log4cxx/src/main/cpp/andfilter.cpp:18:
      ../../../../log4cxx/src/main/include/log4cxx/spi/loggingevent.h:171:45: error: declaration of ‘typedef log4cxx::spi::KeySet log4cxx::spi::LoggingEvent::KeySet’ [-fpermissive]
      typedef spi::KeySet KeySet;
      ^
      In file included from ../../../../log4cxx/src/main/include/log4cxx/helpers/objectptr.h:21:0,
      from ../../../../log4cxx/src/main/include/log4cxx/spi/filter.h:21,
      from ../../../../log4cxx/src/main/include/log4cxx/filter/andfilter.h:27,
      from ../../../../log4cxx/src/main/cpp/andfilter.cpp:18:
      ../../../../log4cxx/src/main/include/log4cxx/spi/loggingevent.h:46:34: error: changes meaning of ‘KeySet’ from ‘typedef class std::vector<std::basic_string<char> > log4cxx::spi::KeySet’ [-fpermissive]
      LOG4CXX_LIST_DEF(KeySet, LogString);
      ^
      ../../../../log4cxx/src/main/include/log4cxx/log4cxx.h:48:55: note: in definition of macro ‘LOG4CXX_LIST_DEF’
      #define LOG4CXX_LIST_DEF(N, T) typedef std::vector<T> N

      Attachments

        Activity

          People

            ulerich Rhys Ulerich
            ulerich Rhys Ulerich
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: