LOGCXX-419 'typedef spi::KeySet KeySet' changes meaning of typedef

As discussed in the issue, the problem was that this typedef appeared after
the spi::KeySet typedef had already been used in a prior member declaration.